# DDPEC

./: .gitignore  dropdown.html  index.html  package-lock.json  package.json  vite.config.ts
docs/: system-eq.md
scripts/: generate-pwa-icons.mjs  generate-tauri-icons.mjs
src/: abx.test.ts  abx.ts  audioReactive.test.ts  audioReactive.ts  autoeq.test.ts  autoeq.ts  autofit.test.ts  autofit.ts  commandPalette.test.ts  commandPalette.ts  commandPaletteInline.test.ts  commandPaletteInline.ts  constants.ts  deviceConfig.ts  dropdown.ts  dsp.ts  emptyStateCard.ts  fn.ts  haptic.ts  helpers.ts  history.test.ts  history.ts  importExport.ts  main.ts  measurements.test.ts  measurements.ts  modal.ts  morph.test.ts  morph.ts  numericInput.test.ts  numericInput.ts  peq.template.html  peq.ts  presets.test.ts  presets.ts  reduceBands.test.ts  reduceBands.ts  session.test.ts  session.ts  sessionTimeline.test.ts  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/dsp/: biquad.test.ts  biquad.ts  encoders.test.ts  encoders.ts
