[package]
name = "ddpec"
version = "0.3.0"
description = "DDPEC — parametric EQ for USB DAC dongles, plus host-side System EQ for macOS."
edition = "2021"
rust-version = "1.77"

[lib]
name = "ddpec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default features mirror Tauri 2's prod expectations. CLI-side flags
# (e.g. tauri dev / tauri build) layer on top of these.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
